# praDeep

./: .dockerignore  .env.example  .env.example_CN  .gitignore  .kilocodemodes  .pre-commit-config.yaml  .secrets.baseline  AGENT_SUGGESTIONS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  Makefile  PROGRESS.md  README.md  SKELETON_COMPONENTS.md  VISUAL_DIFF_IMPLEMENTATION.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  settings.py  start  stop  test_agent_suggestions.py  vibe-kanban-home
.automaker/: active-branches.json  app_spec.txt  categories.json  project-analysis.md
.automaker/context/: context-metadata.json
.automaker/memory/: api.md  architecture.md  database.md  gotchas.md  performance.md  security.md  testing.md  ui.md
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docker-publish.yml  linting.yaml  sync-branch.yml  tests.yml  update-roster.yml
.kilocode/: mcp.json
.sisyphus/: boulder.json
.sisyphus/plans/: frontend-redesign.md
assets/README/: README_AR.md  README_CN.md  README_ES.md  README_FR.md  README_HI.md  README_JA.md  README_PT.md  README_RU.md
assets/releases/: ver0-3-0.md  ver0-4-0.md  ver0-4-1.md  ver0-5-0.md
config/: README.md  agents.yaml  main.yaml
data/: README.md
docs/: LIVE.md  TESTING.md  ai-orchestration-guide.md  ai-orchestration-tools.md  automaker-quickstart.md  changelog.md  ideagen-context-fix-summary.md  index.md  package-lock.json  praDeep-architecture-overview.md  roadmap.md
docs/.vitepress/: config.mts
docs/api/: endpoints.md  index.md  sdk.md  webhooks.md
docs/architecture/: components.md  data-flow.md  index.md  memory-systems.md  system-overview.md
docs/configuration/: advanced.md  environment.md  index.md  models.md  storage.md
docs/features/: overview.md
docs/fixes/: RAGANYTHING_MINERU_PATH_FIX.md
docs/getting-started/: first-steps.md  index.md  installation.md  quickstart.md
docs/guide/: configuration.md  getting-started.md  troubleshooting.md
docs/guides/: deployment.md  index.md  knowledge-bases.md  local-models.md
docs/local/: README.md
docs/plans/: 2026-01-10-qwen3-vl-reranker-design.md  2026-01-11-agent-memory-shared-storage-design.md  2026-01-11-code-playground-design.md  2026-01-11-user-profiles-design.md  2026-01-13-council-mode-design.md
docs/research/: apple-silicon-benchmarks.md  cost-analysis.md  decisions.md  embedding-models.md  index.md
docs/workflow/: agents.md  index.md
plans/: homepage-uiux-plan.md
scripts/: agent_suggestions_smoke.py  generate_roster.py  install_all.py  install_all.sh  start  start.py  start_web.py
src/agents/: base_agent.py
src/api/: README.md  main.py
src/config/: constants.py  defaults.py  schema.py  settings.py
src/core/: errors.py
src/di/: __init__.py  container.py
src/knowledge/: README.md  add_documents.py  config.py  document_tracker.py  extract_numbered_items.py  initializer.py  manager.py  prerequisite_graph.py  start_kb.py  version_manager.py
src/logging/: __init__.py  logger.py
src/rate_limiting/: __init__.py  config.py  service.py
src/repositories/: __init__.py  interfaces.py
src/services/: __init__.py
src/storage/: __init__.py  factory.py  local.py  memory.py  provider.py  s3.py
src/tools/: README.md  __init__.py  code_executor.py  paper_search_tool.py  query_item_tool.py  rag_tool.py  tex_chunker.py  tex_downloader.py  web_search.py
src/utils/: config_manager.py  document_validator.py  error_utils.py
tests/: conftest.py  test_embedding_qwen3_vl.py
tests/api/: test_chat_council_audio_meta.py
tests/core/: test_config_manager.py
tests/scripts/: test_server_scripts.py
tests/web/: test_next_proxy_convention.py
web/: .env.local  README.md  components.json  design-tokens.json  di-container-verification.spec.ts  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  playwright.barrel-exports-temp.config.ts  playwright.di-verification.config.ts  playwright.hydration-verification.config.ts  playwright.latex-equation-editor.config.ts  playwright.personalization-verification.config.ts  playwright.pwa-assets-verification.config.ts  playwright.touch-verification.config.ts  proxy.ts  tailwind.config.js  tsconfig.__recommendationcheck__.json  tsconfig.__solvercheck__.json  tsconfig.json  tsconfig.tsbuildinfo
web/app/: HomePageClient.tsx  HomePageShell.tsx  PWAProvider.tsx  globals.css  layout.tsx  manifest.ts  page.tsx  pwa-init.tsx
web/lib/: api.ts  (+12 more)
(+650 files in other folders)
